# ubu-block

./: .gitignore  CHANGELOG.md  Cargo.toml  DockerFile  Procfile  README.md  package.json
.github/workflows/: release.yml
apps/api/: Cargo.toml
apps/api/src/: lib.rs
apps/cli/: Cargo.toml  config.toml  full_init.sql  init.sql
apps/cli/src/: init.rs  main.rs  query.rs  validate.rs
apps/web/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
apps/web/public/: style.css
apps/web/src/: main.rs
apps/web/src/api/: mod.rs
apps/web/src/components/: election_header.rs  election_map.rs  kenyan_map.rs  mod.rs  result_card.rs  result_stream.rs  result_table.rs
apps/web/src/pages/: home.rs  mod.rs  results.rs  submit.rs
crates/blockchain/: Cargo.toml
crates/blockchain/src/: lib.rs  merkle.rs
crates/database/: Cargo.toml
crates/database/sql/: main_db.sql  private_db.sql
crates/database/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: config.rs  crypto.rs  error.rs  lib.rs  merkle.rs  models.rs  p2p.rs  results.rs
examples/: basic.rs
extract/: generate.py  generate_init_sql.py  pyproject.toml
extract/byelections_2025/: byelections_2025-page-1-table-1  byelections_2025-page-10-table-1  byelections_2025-page-11-table-1  byelections_2025-page-12-table-1  byelections_2025-page-13-table-1  byelections_2025-page-13-table-2  byelections_2025-page-14-table-1  byelections_2025-page-15-table-1  byelections_2025-page-16-table-1  byelections_2025-page-17-table-1  byelections_2025-page-18-table-1  byelections_2025-page-19-table-1  byelections_2025-page-2-table-1  byelections_2025-page-2-table-2  byelections_2025-page-20-table-1  byelections_2025-page-21-table-1  byelections_2025-page-22-table-1  byelections_2025-page-23-table-1  byelections_2025-page-24-table-1  byelections_2025-page-25-table-1  byelections_2025-page-26-table-1  byelections_2025-page-27-table-1  byelections_2025-page-28-table-1  byelections_2025-page-29-table-1  byelections_2025-page-3-table-1  byelections_2025-page-30-table-1  byelections_2025-page-31-table-1  byelections_2025-page-32-table-1  byelections_2025-page-33-table-1  byelections_2025-page-34-table-1  byelections_2025-page-35-table-1  byelections_2025-page-36-table-1  byelections_2025-page-37-table-1  byelections_2025-page-38-table-1  byelections_2025-page-39-table-1  byelections_2025-page-4-table-1  byelections_2025-page-40-table-1  byelections_2025-page-41-table-1  byelections_2025-page-42-table-1  byelections_2025-page-42-table-2  (+48 more)
extract/services/: candidate_data_extractor.py  polling_data_extractor.py  shared_utils.py
nodes/observer/: Cargo.toml
nodes/observer/src/: main.rs
nodes/submission/: Cargo.toml  config1.toml  config2.toml
nodes/submission/src/: main.rs
nodes/verification/: Cargo.toml
src/: blockchain.rs  crypto.rs  db.rs  lib.rs  main.rs
src/sql/: empty.db  main_db.sql
