[package]
name = "ubu-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1", features = ["macros"]}
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
tabled = "0.7.0"
sha3 = "0.10.1"
bincode = "1.3.3"
serde = { version = "1", features=["derive"] }
chrono = { version = "0.4", features = ["serde"]}
p256 = { version = "0.11.1", features = ["ecdsa"] }