[package]
name = "ubu-block"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "apps/cli",
    "apps/web",
    "crates/blockchain",
    "crates/database",
    "crates/types",
    "nodes/observer",
    "nodes/submission",
    "nodes/verification",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "crates/types" }
blockchain = { path = "crates/blockchain" }
database = { path = "crates/database" }
