[package]
name = "ubu-block"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["apps/api",
    "apps/cli",
    "apps/web",
    "crates/blockchain",
    "crates/database",
    "crates/types",
    "nodes/observer",
    "nodes/submission",
    "nodes/verification",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "crates/types" }
blockchain = { path = "crates/blockchain" }
database = { path = "crates/database" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"
axum = { version = "0.8", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
api = { path = "apps/api" }
clap = { version = "4.5.48", features = ["derive"] }
toml = "0.9.7"

[[bin]]
name = "submission"
path = "nodes/submission/src/main.rs"
