[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { path = "../../crates/types" }
blockchain = { path = "../../crates/blockchain" }
database = { path = "../../crates/database" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.48", features = ["derive"] }
toml = "0.9.7"
log = "0.4"
tabled = "0.7.0"
sqlx = { version = "0.8" }
bincode = "1.3.3"
