[package]
name = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
p256 = { version = "0.13.2", features = ["ecdsa", "serde", "pem"] }
bincode = "1.3.3"
sha3 = "0.10.8"
hex = "0.4.3"
sqlx = { version = "0.8", features = ["chrono", "sqlite"] }
thiserror = "2"
tokio = { version = "1" }
